fix squishy portrait in chrome

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -16,9 +16,8 @@
 
 #portrait {
   max-width: 250px;
-  /* max-height: 250px; */
+  max-height: 250px;
   width: 100%;
-  height: auto;
 }
 
 #bio {
